- Fixed: Issue with contained essentials context line alignment - Changed: How transitions are orginized
***Note: Repetitive code has been added to get a better result***

--- a/NeoZen/Theme/Tabs/TabsContainers/Tabs-Containers-Transitions.css
+++ b/NeoZen/Theme/Tabs/TabsContainers/Tabs-Containers-Transitions.css
@@ -1,32 +1,11 @@
 @media not (-moz-pref("neo-style-tabs-containers-disabled")) {
-    .tabbrowser-tab[usercontextid] {
-        &:hover[usercontextid]:not([selected]) {
-            .tab-context-line {
-                width: 40% !important;
-            }
-        }
-
-        &[selected][usercontextid] {
-            .tab-context-line {
-                width: 60% !important;
-            }
-        }
-
-        &:hover[usercontextid][selected] {
-            .tab-context-line {
-                width: 75% !important;
-            }
-        }
-    }
-
-
     /* Tab gradient color container transition */
-    .tabbrowser-tab[usercontextid]:not([selected]) .tab-background::after {
+    .tabbrowser-tab[usercontextid]:not([selected]):not([zen-essential="true"]) .tab-background::after {
         opacity: 0.0;
         transition: opacity 0.9s ease;
     }
 
-    .tabbrowser-tab[usercontextid][selected] .tab-background::after {
+    .tabbrowser-tab[usercontextid][selected]:not([zen-essential="true"]) .tab-background::after {
         opacity: 0.25;
         background: radial-gradient(color-mix(in srgb, var(--identity-tab-color) 40%, white) 20%, color-mix(in srgb, var(--identity-tab-color) 70%, white) 100%) !important;
         transition: opacity 0.9s ease;
